Wed, 14 Nov 2007 21:55:18 +0100 <thp@perli.net>
Add informative tooltips to channel navigator

	* src/gpodder/gui.py: Add tooltips to channel navigator that show a
	bigger cover image, the title, description, url and used disk space
	* src/gpodder/libpodcasts.py: Add save_dir_size property to
	podcastChannel that contains the disk usage of the channel's save_dir;
	this can be manually updated by calling update_save_dir_size() and
	will automatically be updated when the GUI code hooks into the
	channel; also add get_cover_pixbuf() that returns a pixbuf of the
	cover for a given size or None if there is no valid cover file

Wed, 14 Nov 2007 19:19:11 +0100 <thp@perli.net>
Slipstream code (enumerate instead of simple position tracking)
	* src/gpodder/libipodsync.py: Use enumerate() to iterate over a list
	of episodes instead of keeping track of the position "by hand"

Wed, 14 Nov 2007 19:17:51 +0100 <thp@perli.net>
Ignore initial window events from GtkWindow in Config

	* src/gpodder/config.py: Add a flag to config manager to ignore window
	events until the window has been realized; then, start taking position
	and size updates

Mon, 12 Nov 2007 20:25:39 +0100 <thp@perli.net>
Improve caching for HTTP redirects and minor errors; cache clean-up

	* src/gpodder/cache.py: Cache content when it comes from a HTTP
	redirect (301, 302, 307); cache feeds even with parsing errors, so we
	can "fill" our cache and not download on every startup
	* src/gpodder/libpodcasts.py: Add cache clean-up code after loading
	channels; this should keep the feedcache.db file smaller for users
	that like to try out new channels (or have used gPodder for a while)

Sun, 11 Nov 2007 14:24:17 +0100 <thp@perli.net>
Better file extension guessing for URLs

	* src/gpodder/util.py: Improve file_extension_from_url() by adding
	additional checks for known good extensions and recurse into the query
	string if it looks like an URL; this should fix compatibility problems